--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -32,7 +32,7 @@
         <div class="col-lg-9">
             <PersianDatePicker
                 @bind-Value="Model.LoginAt"
-                UsePersianNumbers="true"
+                UsePersianNumbers="false"
                 class="form-control"/>
         </div>
     </div>
@@ -42,7 +42,7 @@
         <div class="col-lg-9">
             <PersianDatePicker
                 @bind-Value="Model.LogoutAt"
-                UsePersianNumbers="true"
+                UsePersianNumbers="false"
                 class="form-control"/>
         </div>
     </div>
@@ -52,7 +52,7 @@
         <div class="col-lg-9">
             <PersianDatePicker
                 @bind-Value="Model.RegisterAt"
-                UsePersianNumbers="true"
+                UsePersianNumbers="false"
                 class="form-control"/>
         </div>
     </div>
