--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -29,7 +29,7 @@
     </div>
 
 <script src="_content/AmibDatePickerBlazorComponent.Lib/js/js-persian-cal.min.js"></script>
-<script src="_content/AmibDatePickerBlazorComponent.Lib/js/activateDatePicker.js"></script>
+<script src="_content/AmibDatePickerBlazorComponent.Lib/js/CallAmib.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
